--- a/project-checkyourself.html
+++ b/project-checkyourself.html
@@ -79,9 +79,9 @@
       </div>
 
        <div id="box">
-        <a href="https://vimeo.com/453154042" target="blank_"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/04_webflow.jpg" width="40%" style="padding-top:105%; left:23%"></a>
+        <a href="https://vimeo.com/453154042" target="blank_"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/04_webflow.jpg" width="40%" style="padding-top:105%; left:23%; z-index:2; cursor:pointer;"></a>
       </div>
-      
+
       <div id="box">
         <img src="assets/images/PROJECTS/01_CHECKYOURSELF/12_decor.png" width="5%" style="padding-top:120%; left:70%">
       </div>
