--- a/project-kanyevthepeople.html
+++ b/project-kanyevthepeople.html
@@ -61,11 +61,29 @@
 
     <div class="background-pr6">
       <br><br><br><br>
-      <span class="pr1-image-1"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/02_mainposter.jpg"></span>
-      <span class="pr1-image-2"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/01_IDEATIONPRESENTATION.gif"></span>
-      <span class="pr1-image-3"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/03_ideationposter.gif"></span>
-      <span class="pr1-image-4"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/07_webflow3.jpg"></span>
-      <span class="pr1-image-5"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/04_webflow.jpg"></span>
+      <div id="box" >
+        <img src="assets/images/PROJECTS/06_kanye/01_kanye.png" width="60%" style="left:20%">
+      </div>
+
+      <div id="box" >
+        <img src="assets/images/PROJECTS/06_kanye/02_kanye.png" width="40%" style="left:30%; padding-top:45%;">
+      </div>
+
+      <div id="box" >
+        <img src="assets/images/PROJECTS/06_kanye/03_kanye.jpg" width="50%" style="left:5%; padding-top:77%;">
+      </div>
+
+      <div id="box" >
+        <img src="assets/images/PROJECTS/06_kanye/04_kanye.jpg" width="50%" style="left:45%; padding-top:104%;">
+      </div>
+
+      <div id="box" >
+        <img src="assets/images/PROJECTS/06_kanye/05_kanye.jpg" width="42%" style="left:0%; padding-top:113%;">
+      </div>
+
+      <div id="box" >
+        <img src="assets/images/PROJECTS/06_kanye/06_kanye.jpg" width="50%" style="left:45%; padding-top:140%; margin-bottom:10%">
+      </div>
     </div>
 
        
