--- a/project-moti.html
+++ b/project-moti.html
@@ -60,12 +60,34 @@
     </div>
 
     <div class="background-pr2">
-      <br><br><br><br>
-      <span class="pr1-image-1"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/02_mainposter.jpg"></span>
-      <span class="pr1-image-2"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/01_IDEATIONPRESENTATION.gif"></span>
-      <span class="pr1-image-3"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/03_ideationposter.gif"></span>
-      <span class="pr1-image-4"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/07_webflow3.jpg"></span>
-      <span class="pr1-image-5"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/04_webflow.jpg"></span>
+       <br><br><br><br>
+      <div id="box" >
+        <img src="assets/images/PROJECTS/02_moti/05_moti.jpg" width="30%" style="left:35%">
+      </div>
+
+      <div id="box" >
+        <img src="assets/images/PROJECTS/02_moti/01_moti.jpg" width="50%" style="left:7%; padding-top:50%;">
+      </div>
+
+      <div id="box" >
+        <img src="assets/images/PROJECTS/02_moti/06_moti.gif" width="35%" style="left:35%; padding-top:90%;">
+      </div>
+
+      <div id="box" >
+        <img src="assets/images/PROJECTS/02_moti/04_moti.jpg" width="45%" style="left:48%; padding-top:130%;">
+      </div>
+
+      <div id="box" >
+        <img src="assets/images/PROJECTS/02_moti/03_moti.jpg" width="45%" style="left:10%; padding-top:150%;">
+      </div>
+
+      <div id="box" >
+        <a href="https://vimeo.com/333548585" target="blank_"><img src="assets/images/PROJECTS/02_moti/07_moti.jpg" width="35%" style="left:35%; padding-top:185%; z-index:2; cursor:pointer;"></a>
+      </div>
+
+      <div id="box" >
+        <img src="assets/images/PROJECTS/02_moti/02_moti.jpg" width="35%" style="left:55%; padding-top:212%; padding-bottom:10%;">
+      </div>
     </div>
 
        
