--- a/project-productnatural.html
+++ b/project-productnatural.html
@@ -49,6 +49,13 @@
 
         <div class="about-body background">
             Product: Natural explores how the way of advertising has changed, and whether or not the word “natural” or “fresh” still create a significant impact in today’s society and asks the question: why do we even care about it? A website was created to promote and expand the context of the book. Inspired by the look of Instagram, where most (subliminal) advertising finds its way to us. It contains pictures of the book itself, photographed alongside “natural” products. Each chapter of the book becomes each page of the website, the pages contain excerpts from the book.
+            <br><br>
+            5x8 in, 13x20 cm<br>
+            110 pages<br>
+            Author: Alma Santang<br>
+            ISBN: 9780368761973<br>
+            Publish date: May 09, 2019<br>
+            Language: English
         </div>
 
         <div class="title titledesc background">
@@ -60,12 +67,27 @@
     </div>
 
     <div class="background-pr3">
-      <br><br><br><br>
-      <span class="pr1-image-1"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/02_mainposter.jpg"></span>
-      <span class="pr1-image-2"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/01_IDEATIONPRESENTATION.gif"></span>
-      <span class="pr1-image-3"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/03_ideationposter.gif"></span>
-      <span class="pr1-image-4"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/07_webflow3.jpg"></span>
-      <span class="pr1-image-5"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/04_webflow.jpg"></span>
+        <br><br><br><br>
+      <div id="box" >
+        <img src="assets/images/PROJECTS/03_productnatural/01_pn.gif" width="40%" style="left:30%">
+      </div>
+
+      <div id="box" >
+        <img src="assets/images/PROJECTS/03_productnatural/02_pn.jpg" width="35%" style="left:10%; padding-top:35%">
+      </div>
+
+      <div id="box" >
+        <img src="assets/images/PROJECTS/03_productnatural/03_pn.jpg" width="35%" style="left:53%; padding-top:55%">
+      </div>
+
+      <div id="box" >
+        <a href="https://vimeo.com/455031819" target="blank_"><img src="assets/images/PROJECTS/03_productnatural/04_pn.gif" width="40%" style="left:20%; padding-top:90%; z-index:2; cursor:pointer;"></a>
+      </div>
+
+      <div id="box" >
+        <a href="https://vimeo.com/341470455" target="blank_"><img src="assets/images/PROJECTS/03_productnatural/05_pn.jpg" width="40%" style="left:55%; padding-top:120%; z-index:2; cursor:pointer; margin-bottom:15%;"></a>
+      </div>
+      
     </div>
 
        
