--- a/project-novus.html
+++ b/project-novus.html
@@ -61,11 +61,44 @@
 
     <div class="background-pr4">
       <br><br><br><br>
-      <span class="pr1-image-1"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/02_mainposter.jpg"></span>
-      <span class="pr1-image-2"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/01_IDEATIONPRESENTATION.gif"></span>
-      <span class="pr1-image-3"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/03_ideationposter.gif"></span>
-      <span class="pr1-image-4"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/07_webflow3.jpg"></span>
-      <span class="pr1-image-5"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/04_webflow.jpg"></span>
+      <div id="box" >
+        <img src="assets/images/PROJECTS/04_novus/01_novus.gif" width="60%" style="left:20%">
+      </div>
+
+      <div id="box" >
+        <img src="assets/images/PROJECTS/04_novus/03_novus.gif" width="40%" style="left:8%; padding-top:50%;">
+        <img src="assets/images/PROJECTS/04_novus/02_novus.jpg" width="35%" style="left:55%; padding-top:40%;">
+      </div>
+
+      <div id="box" >
+        <img src="assets/images/PROJECTS/04_novus/04_novus.gif" width="40%" style="left:12%; padding-top:95%;">
+      </div>
+
+      <div id="box" >
+        <a href="https://vimeo.com/333548585" target="blank_"><img src="assets/images/PROJECTS/04_novus/08_novus.jpg" width="35%" style="left:38%; padding-top:135%; z-index:2; cursor:pointer;"></a>
+      </div>
+
+      <div id="box" >
+        <img src="assets/images/PROJECTS/04_novus/07_novus.jpg" width="50%" style="left:45%; padding-top:160%;">
+      </div>
+
+      <div id="box" >
+        <img src="assets/images/PROJECTS/04_novus/05_novus.png" width="40%" style="left:15%; padding-top:190%; z-index:-3;">
+      </div>
+
+      <div id="box" >
+        <img src="assets/images/PROJECTS/04_novus/09_novus.jpg" width="20%" style="left:23%; padding-top:240%;">
+        <img src="assets/images/PROJECTS/04_novus/06_novus.png" width="47.4%" style="left:43%; padding-top:240%;">
+      </div>
+
+      <div id="box" >
+         <img src="assets/images/PROJECTS/04_novus/10_novus.jpg" width="40%" style="left:10%; padding-top:270%;">
+         <img src="assets/images/PROJECTS/04_novus/11_novus.jpg" width="16.5%" style="left:50%; padding-top:270%;">
+      </div>
+
+      <div id="box" >
+        <a href="https://vimeo.com/455159135" target="blank_"><img src="assets/images/PROJECTS/04_novus/12_novus.jpg" width="40%" style="left:55%; padding-top:300%; z-index:2; cursor:pointer; margin-bottom:15%;"></a>
+      </div>
     </div>
 
        
