all projects in for now

--- a/about-page.html
+++ b/about-page.html
@@ -89,8 +89,9 @@
           <a href="mailto: almasantang@gmail.com" target="_blank" class="contact-link">↗Email</a><br>
           <a href="https://www.linkedin.com/in/almasantang/" target="_blank" class="contact-link">↗LinkedIn</a><br>
           <a href="https://www.instagram.com/almasantang" target="_blank" class="contact-link">↗Instagram</a><br>
-          <a href="https://drive.google.com/file/d/18A8EbfJSxAQur0iXs6ENSsyQa0LcgGPu/view?usp=sharing" target="_blank" class="contact-link">↗Download portfolio</a><br>
-        </div><br><br><br><br><br><br><br><br>
+<!--           <a href="https://drive.google.com/file/d/18A8EbfJSxAQur0iXs6ENSsyQa0LcgGPu/view?usp=sharing" target="_blank" class="contact-link">↗Download portfolio</a><br>
+        </div> -->
+        <br><br><br><br><br><br><br><br>
 
         <div class="about-title"> <a href="index.html" class="navigation">⤺Take me home</a></div>
         <br><br><br><br><br>
