--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
         <!-- HOMEPAGE PROJECTS REEL ENDS HERE --> 
 
         <!-- PORTFOLIO PUSH STARTS HERE --> 
-        <div class="bodycopy-hp">
+<!--         <div class="bodycopy-hp">
             Going straight to second base? <br> Download her portfolio <a href="https://drive.google.com/file/d/18A8EbfJSxAQur0iXs6ENSsyQa0LcgGPu/view?usp=sharing" target="_blank" class="download-porto">here.</a><br><br>
-        </div>
+        </div> -->
         <!-- PORTFOLIO PUSH ENDS HERE --> 
         
       </div>
