--- a/project-agora.html
+++ b/project-agora.html
@@ -78,11 +78,24 @@
 
     <div class="background-pr8">
       <br><br><br><br>
-      <span class="pr1-image-1"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/02_mainposter.jpg"></span>
-      <span class="pr1-image-2"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/01_IDEATIONPRESENTATION.gif"></span>
-      <span class="pr1-image-3"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/03_ideationposter.gif"></span>
-      <span class="pr1-image-4"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/07_webflow3.jpg"></span>
-      <span class="pr1-image-5"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/04_webflow.jpg"></span>
+      <div id="box" >
+        <img src="assets/images/PROJECTS/08_AGORA/07_agora.png" width="40%" style="left:30%; padding-top:3%">
+      </div>
+
+      <div id="box" >
+        <img src="assets/images/PROJECTS/08_AGORA/01_agora.gif" width="27%" style="left:22%; padding-top:28%;">
+      </div>
+
+      <div id="box" >
+        <img src="assets/images/PROJECTS/08_AGORA/08_agora.gif" width="27%" style="left:52%; padding-top:48%;">
+        <img src="assets/images/PROJECTS/08_AGORA/03_agora.png" width="8%" style="left:75%; padding-top:65%;">
+      </div>
+
+      <div id="box" >
+        <img src="assets/images/PROJECTS/08_AGORA/04_agora.png" width="27%" style="left:0%; padding-top:66%;">
+        <img src="assets/images/PROJECTS/08_AGORA/05_agora.png" width="27%" style="left:12%; padding-top:75%; transform:rotate(15deg); margin-bottom:10%">
+        
+      </div>
     </div>
 
        
