--- a/project-agw.html
+++ b/project-agw.html
@@ -78,11 +78,24 @@
 
     <div class="background-pr7">
       <br><br><br><br>
-      <span class="pr1-image-1"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/02_mainposter.jpg"></span>
-      <span class="pr1-image-2"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/01_IDEATIONPRESENTATION.gif"></span>
-      <span class="pr1-image-3"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/03_ideationposter.gif"></span>
-      <span class="pr1-image-4"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/07_webflow3.jpg"></span>
-      <span class="pr1-image-5"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/04_webflow.jpg"></span>
+      <div id="box" >
+        <img src="assets/images/PROJECTS/07_AGW/02_agw.jpg" width="26%" style="left:38%">
+      </div>
+
+      <div id="box" >
+        <img src="assets/images/PROJECTS/07_AGW/01_agw.gif" width="45%" style="left:29%; padding-top:33%;">
+      </div>
+
+      <div id="box" >
+        <img src="assets/images/PROJECTS/07_AGW/05_agw.gif" width="16%" style="left:24%; padding-top:74%;">
+        <img src="assets/images/PROJECTS/07_AGW/03_agw.gif" width="16%" style="left:44%; padding-top:74%;">
+        <img src="assets/images/PROJECTS/07_AGW/04_agw.gif" width="16%" style="left:64%; padding-top:74%;">
+      </div>
+
+      <div id="box" >
+        <img src="assets/images/PROJECTS/07_AGW/06_agw.gif" width="22%" style="left:26%; padding-top:104%; margin-bottom:10%">
+        <img src="assets/images/PROJECTS/07_AGW/07_agw.png" width="22%" style="left:56%; padding-top:104%;">
+      </div>
     </div>
 
        
