--- a/project-stayinside.html
+++ b/project-stayinside.html
@@ -75,11 +75,7 @@
 
     <div class="background-pr8">
       <br><br><br><br>
-      <span class="pr1-image-1"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/02_mainposter.jpg"></span>
-      <span class="pr1-image-2"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/01_IDEATIONPRESENTATION.gif"></span>
-      <span class="pr1-image-3"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/03_ideationposter.gif"></span>
-      <span class="pr1-image-4"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/07_webflow3.jpg"></span>
-      <span class="pr1-image-5"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/04_webflow.jpg"></span>
+      <iframe src="https://player.vimeo.com/video/455205866" width="640" height="564" style="margin-left:30%; margin-bottom:10%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
     </div>
 
        
