update agw video

--- a/project-agw.html
+++ b/project-agw.html
@@ -94,7 +94,7 @@
 
       <div id="box" >
         <img src="assets/images/PROJECTS/07_AGW/06_agw.gif" width="22%" style="left:26%; padding-top:104%; margin-bottom:10%">
-        <img src="assets/images/PROJECTS/07_AGW/07_agw.png" width="22%" style="left:56%; padding-top:104%;">
+        <a href="https://vimeo.com/455215456" target="blank_"><img src="assets/images/PROJECTS/07_AGW/07_agw.png" width="22%" style="left:56%;z-index:2; cursor:pointer; padding-top:104%;"></a>
       </div>
     </div>
 
