--- a/about-page.html
+++ b/about-page.html
@@ -91,9 +91,10 @@
           <a href="https://www.instagram.com/almasantang" target="_blank" class="contact-link">↗Instagram</a><br>
 <!--           <a href="https://drive.google.com/file/d/18A8EbfJSxAQur0iXs6ENSsyQa0LcgGPu/view?usp=sharing" target="_blank" class="contact-link">↗Download portfolio</a><br>
         </div> -->
-        <br><br><br><br><br><br><br><br>
+        <br><br>
+      </div>
 
-        <div class="about-title"> <a href="index.html" class="navigation">⤺Take me home</a></div>
+        <div class="about-title takemehome"> <a href="index.html" class="navigation">⤺Take me home</a></div>
         <br><br><br><br><br>
         
         <!-- EXPERIENCE -->     
