homepage pointer fixed

--- a/index.html
+++ b/index.html
@@ -59,23 +59,23 @@
 
         <!-- HOMEPAGE PROJECTS REEL STARTS HERE --> 
         <div class="projects">
-            <a href="project-checkyourself.html" class="pic-1"><img src="assets/images/HP_PROJECT_IMAGES/pr1-checkyourself.gif"></a>
+            <a href="project-checkyourself.html"><img src="assets/images/HP_PROJECT_IMAGES/pr1-checkyourself.gif" class="pic"></a>
 
-            <a href="project-moti.html" class="pic-2"><img src="assets/images/HP_PROJECT_IMAGES/pr2-MOTI.png"></a>
+            <a href="project-moti.html"><img src="assets/images/HP_PROJECT_IMAGES/pr2-MOTI.png" class="pic"></a>
 
-            <a href="project-productnatural.html" class="pic-3"><img src="assets/images/HP_PROJECT_IMAGES/pr3-productnatural.gif"></a>
+            <a href="project-productnatural.html"><img src="assets/images/HP_PROJECT_IMAGES/pr3-productnatural.gif" class="pic"></a>
 
-            <a href="project-novus.html" class="pic-4"><img src="assets/images/HP_PROJECT_IMAGES/pr4-NOVUS.png"></a>
+            <a href="project-novus.html"><img src="assets/images/HP_PROJECT_IMAGES/pr4-NOVUS.png" class="pic"></a>
 
-            <a href="project-therobinhood.html" class="pic-5"><img src="assets/images/HP_PROJECT_IMAGES/pr5-therobinhood.png"></a>
+            <a href="project-therobinhood.html"><img src="assets/images/HP_PROJECT_IMAGES/pr5-therobinhood.png" class="pic"></a>
 
-            <a href="project-agora.html" class="pic-6"><img src="assets/images/HP_PROJECT_IMAGES/pr8-AGORA.gif"></a>
+            <a href="project-agora.html"><img src="assets/images/HP_PROJECT_IMAGES/pr8-AGORA.gif" class="pic"></a>
 
-            <a href="project-agw.html" class="pic-7"><img src="assets/images/HP_PROJECT_IMAGES/pr7-agw.gif"></a>
+            <a href="project-agw.html"><img src="assets/images/HP_PROJECT_IMAGES/pr7-agw.gif" class="pic"></a>
 
-            <a href="project-kanyevthepeople.html" class="pic-8"><img src="assets/images/HP_PROJECT_IMAGES/pr6-kanyevthepeople.png"></a>
+            <a href="project-kanyevthepeople.html"><img src="assets/images/HP_PROJECT_IMAGES/pr6-kanyevthepeople.png" class="pic"></a>
 
-            <a href="project-stayinside.html" class="pic-9"><img src="assets/images/HP_PROJECT_IMAGES/pr9-stayinside.gif"></a>
+            <a href="project-stayinside.html"><img src="assets/images/HP_PROJECT_IMAGES/pr9-stayinside.gif" class="pic"></a>
             <br><br>
         </div>
         <!-- HOMEPAGE PROJECTS REEL ENDS HERE --> 
