--- a/project-kanyevthepeople.html
+++ b/project-kanyevthepeople.html
@@ -87,19 +87,19 @@
       </div>
 
       <div id="box" >
-        <img src="assets/images/PROJECTS/06_KANYE/03_kanye.jpg" width="50%" style="left:5%; padding-top:77%;">
+        <img src="assets/images/PROJECTS/06_KANYE/03_kanye.JPG" width="50%" style="left:5%; padding-top:77%;">
       </div>
 
       <div id="box" >
-        <img src="assets/images/PROJECTS/06_KANYE/04_kanye.jpg" width="50%" style="left:45%; padding-top:104%;">
+        <img src="assets/images/PROJECTS/06_KANYE/04_kanye.JPG" width="50%" style="left:45%; padding-top:104%;">
       </div>
 
       <div id="box" >
-        <img src="assets/images/PROJECTS/06_KANYE/05_kanye.jpg" width="42%" style="left:0%; padding-top:113%;">
+        <img src="assets/images/PROJECTS/06_KANYE/05_kanye.JPG" width="42%" style="left:0%; padding-top:113%;">
       </div>
 
       <div id="box" >
-        <img src="assets/images/PROJECTS/06_KANYE/06_kanye.jpg" width="50%" style="left:45%; padding-top:140%; margin-bottom:10%">
+        <img src="assets/images/PROJECTS/06_KANYE/06_kanye.JPG" width="50%" style="left:45%; padding-top:140%; margin-bottom:10%">
       </div>
     </div>
 
