--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
             <a href="project-kanyevthepeople.html"><img src="assets/images/HP_PROJECT_IMAGES/pr6-kanyevthepeople.png" class="pic"></a>
 
             <a href="project-stayinside.html"><img src="assets/images/HP_PROJECT_IMAGES/pr9-stayinside.gif" class="pic"></a>
+
+            <a href="project-iffound.html"><img src="assets/images/HP_PROJECT_IMAGES/pr10-iffound.gif" class="pic"></a>
             <br><br>
         </div>
         <!-- HOMEPAGE PROJECTS REEL ENDS HERE --> 
