--- a/project-iffound.html
+++ b/project-iffound.html
@@ -65,7 +65,7 @@
         </div>
 
         <div class="about-body background">
-            The goal was to capture a sense of place, and their unique experiences of living in Melbourne and what “home” is to them.
+            The goal was to capture a sense of place, and their unique experiences of living in Melbourne and what “home” means to them.
         </div>
 
         <div class="title titledesc background">
@@ -78,11 +78,27 @@
 
     <div class="background-pr5">
       <br><br><br><br>
-      <span class="pr1-image-1"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/02_mainposter.jpg"></span>
-      <span class="pr1-image-2"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/01_IDEATIONPRESENTATION.gif"></span>
-      <span class="pr1-image-3"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/03_ideationposter.gif"></span>
-      <span class="pr1-image-4"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/07_webflow3.jpg"></span>
-      <span class="pr1-image-5"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/04_webflow.jpg"></span>
+      <div id="box" >
+        <img src="assets/images/PROJECTS/10_IFFOUND/01_iffound.gif" width="40%" style="left:30%">
+      </div>
+
+      <div id="box" >
+        <img src="assets/images/PROJECTS/10_IFFOUND/02_iffound.gif" width="90%" style="left:5%; padding-top:35%;">
+      </div>
+
+      <div id="box" >
+        <img src="assets/images/PROJECTS/10_IFFOUND/03_iffound.jpg" width="40%" style="left:15%; padding-top:68%;">
+        <img src="assets/images/PROJECTS/10_IFFOUND/04_iffound.jpg" width="35%" style="left:50%; padding-top:88%;">
+      </div>
+
+      <div id="box" >
+        <img src="assets/images/PROJECTS/10_IFFOUND/05_iffound.gif" width="50%" style="left:25%; padding-top:120%;">
+      </div>
+
+      <div id="box" >
+        <img src="assets/images/PROJECTS/10_IFFOUND/06_iffound.gif" width="35%" style="left:3%; padding-top:170%; transform:rotate(-10deg);">
+        <img src="assets/images/PROJECTS/10_IFFOUND/07_iffound.gif" width="35%" style="left:65%; padding-top:220%; transform:rotate(10deg); margin-bottom:10%;">
+      </div>
     </div>
 
        
