--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
             <a href="project-stayinside.html"><img src="assets/images/HP_PROJECT_IMAGES/pr9-stayinside.gif" class="pic"></a>
 
             <a href="project-iffound.html"><img src="assets/images/HP_PROJECT_IMAGES/pr10-iffound.gif" class="pic"></a>
+
+            <a href="project-alunalun.html"><img src="assets/images/HP_PROJECT_IMAGES/pr11-alun.gif" class="pic"></a>
             <br><br>
         </div>
         <!-- HOMEPAGE PROJECTS REEL ENDS HERE --> 
