--- a/project-alunalun.html
+++ b/project-alunalun.html
@@ -78,11 +78,26 @@
 
     <div class="background-pr7">
       <br><br><br><br>
-      <span class="pr1-image-1"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/02_mainposter.jpg"></span>
-      <span class="pr1-image-2"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/01_IDEATIONPRESENTATION.gif"></span>
-      <span class="pr1-image-3"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/03_ideationposter.gif"></span>
-      <span class="pr1-image-4"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/07_webflow3.jpg"></span>
-      <span class="pr1-image-5"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/04_webflow.jpg"></span>
+      <div id="box" >
+        <img src="assets/images/PROJECTS/11_ALUNALUN/02_alun.jpg" width="38%" style="left:10%">
+      </div>
+
+      <div id="box" >
+        <img src="assets/images/PROJECTS/11_ALUNALUN/04_alun.gif" width="30%" style="left:57%; padding-top:40%;">
+      </div>
+
+      <div id="box" >
+        <img src="assets/images/PROJECTS/11_ALUNALUN/03_alun.jpg" width="30%" style="left:37%; padding-top:100%; margin-bottom:10%">
+      </div>
+
+      <div id="box" >
+        <img src="assets/images/PROJECTS/11_ALUNALUN/08_alun.gif" width="10%" style="left:15%; padding-top:82%; margin-bottom:10%">
+        <img src="assets/images/PROJECTS/11_ALUNALUN/05_alun.gif" width="20%" style="left:17%; padding-top:80%; margin-bottom:10%">
+        <img src="assets/images/PROJECTS/11_ALUNALUN/07_alun.gif" width="15%" style="left:59%; padding-top:7%; margin-bottom:10%">
+        <img src="assets/images/PROJECTS/11_ALUNALUN/06_alun.gif" width="20%" style="left:67%; padding-top:10%; margin-bottom:10%">
+
+
+      </div>
     </div>
 
        
