--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
             <a href="project-iffound.html"><img src="assets/images/HP_PROJECT_IMAGES/pr10-iffound.gif" class="pic"></a>
 
             <a href="project-alunalun.html"><img src="assets/images/HP_PROJECT_IMAGES/pr11-alun.gif" class="pic"></a>
-            <br><br>
+
+            <a href="project-ssspringfall.html"><img src="assets/images/HP_PROJECT_IMAGES/pr12-sspringfall.png" class="pic" width="20%" style="transform:rotate(5deg); margin-left:8%"></a>
+            <br><br><br><br><br><br><br><br><br><br><br><br><br>
         </div>
         <!-- HOMEPAGE PROJECTS REEL ENDS HERE --> 
 
