--- a/project-ssspringfall.html
+++ b/project-ssspringfall.html
@@ -64,10 +64,14 @@
             This is a promotional campaign run by Sand & Sky to promote their head band. It is a part of the Spring/Fall campaign. The idea behind the creative is to capture the “season changes” through animation.
         </div>
 
+        <div class="about-body background">
+            Some of the assets that were made for this campaign include homepage banners extension, EDMs, short-form and long-form ads.
+        </div>
+
 
         <div class="title titledesc background">
-          <br><br><br><br><br><br><br><br><br><br><br>Visual Identity<br>
-          A project for PPIA Victoria
+          <br><br><br><br><br><br><br><br><br><br><br>Campaign visual/ art direction<br>
+          Sand & Sky
         </div>
         <!-- MAIN DESCRIPTIONS -->
       </div>
@@ -75,11 +79,26 @@
 
     <div class="background-pr9">
       <br><br><br><br>
-      <span class="pr1-image-1"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/02_mainposter.jpg"></span>
-      <span class="pr1-image-2"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/01_IDEATIONPRESENTATION.gif"></span>
-      <span class="pr1-image-3"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/03_ideationposter.gif"></span>
-      <span class="pr1-image-4"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/07_webflow3.jpg"></span>
-      <span class="pr1-image-5"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/04_webflow.jpg"></span>
+      <div id="box" >
+        <img src="assets/images/PROJECTS/12_SSSPRINGFALL/05_ssspringfall.gif" width="25%" style="left:23%; padding-top:5%">
+        <img src="assets/images/PROJECTS/12_SSSPRINGFALL/06_ssspringfall.gif" width="25%" style="left:53%; padding-top:5%">
+      </div>
+
+      <div id="box" >
+        <img src="assets/images/PROJECTS/12_SSSPRINGFALL/01_ssspringfall.png" width="70%" style="left:16%; padding-top:43%">
+      </div>
+
+      <div id="box" >
+        <img src="assets/images/PROJECTS/12_SSSPRINGFALL/07_ssspringfall.gif" width="20%" style="left:42%; padding-top:83%; margin-bottom:10%;">
+      </div>
+
+      <div id="box" >
+        <img src="assets/images/PROJECTS/12_SSSPRINGFALL/03_ssspringfall.gif" width="20%" style="left:18%; padding-top:97%">
+      </div>
+
+      <div id="box" >
+        <img src="assets/images/PROJECTS/12_SSSPRINGFALL/04_ssspringfall.gif" width="20%" style="left:66%; padding-top:139%">
+      </div>
     </div>
 
        
