--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <a href="project-alunalun.html"><img src="assets/images/HP_PROJECT_IMAGES/pr11-alun.gif" class="pic"></a>
 
             <a href="project-ssspringfall.html"><img src="assets/images/HP_PROJECT_IMAGES/pr12-sspringfall.png" class="pic" width="20%" style="transform:rotate(5deg); margin-left:8%"></a>
-            <br><br><br><br><br><br><br><br><br><br><br><br><br>
+            <br><br><br><br><br><br><br><br><br>
         </div>
         <!-- HOMEPAGE PROJECTS REEL ENDS HERE --> 
 
@@ -95,9 +95,12 @@
       </div>
     </div>
 
+
       
 
 
 <!-- BODY ENDS HERE -->
   </body>
+
+  <footer> <small class="copyright">&copy; 2020 Alma Santang | All Rights Reserved<br><br></small> </footer>
 </html>
