--- a/project-alunalun.html
+++ b/project-alunalun.html
@@ -87,14 +87,14 @@
       </div>
 
       <div id="box" >
-        <img src="assets/images/PROJECTS/11_ALUNALUN/03_alun.jpg" width="30%" style="left:37%; padding-top:100%; margin-bottom:10%">
+        <img src="assets/images/PROJECTS/11_ALUNALUN/03_alun.jpg" width="30%" style="left:37%; padding-top:100%; padding-bottom:10%">
       </div>
 
       <div id="box" >
         <img src="assets/images/PROJECTS/11_ALUNALUN/08_alun.gif" width="10%" style="left:15%; padding-top:82%; margin-bottom:10%">
         <img src="assets/images/PROJECTS/11_ALUNALUN/05_alun.gif" width="20%" style="left:17%; padding-top:80%; margin-bottom:10%">
         <img src="assets/images/PROJECTS/11_ALUNALUN/07_alun.gif" width="15%" style="left:59%; padding-top:7%; margin-bottom:10%">
-        <img src="assets/images/PROJECTS/11_ALUNALUN/06_alun.gif" width="20%" style="left:67%; padding-top:10%; margin-bottom:10%">
+        <img src="assets/images/PROJECTS/11_ALUNALUN/06_alun.gif" width="20%" style="left:67%; padding-top:10%; padding-bottom:10%">
 
 
       </div>
