--- a/project-iffound.html
+++ b/project-iffound.html
@@ -97,7 +97,7 @@
 
       <div id="box" >
         <img src="assets/images/PROJECTS/10_IFFOUND/06_iffound.gif" width="35%" style="left:3%; padding-top:170%; transform:rotate(-10deg);">
-        <img src="assets/images/PROJECTS/10_IFFOUND/07_iffound.gif" width="35%" style="left:65%; padding-top:220%; transform:rotate(10deg); margin-bottom:10%;">
+        <img src="assets/images/PROJECTS/10_IFFOUND/07_iffound.gif" width="35%" style="left:65%; padding-top:220%; transform:rotate(10deg); padding-bottom:10%;">
       </div>
     </div>
 
