--- a/project-kanyevthepeople.html
+++ b/project-kanyevthepeople.html
@@ -99,7 +99,7 @@
       </div>
 
       <div id="box" >
-        <img src="assets/images/PROJECTS/06_KANYE/06_kanye.JPG" width="50%" style="left:45%; padding-top:140%; margin-bottom:10%">
+        <img src="assets/images/PROJECTS/06_KANYE/06_kanye.JPG" width="50%" style="left:45%; padding-top:140%; padding-bottom:10%">
       </div>
     </div>
 
