--- a/project-ssspringfall.html
+++ b/project-ssspringfall.html
@@ -89,7 +89,7 @@
       </div>
 
       <div id="box" >
-        <img src="assets/images/PROJECTS/12_SSSPRINGFALL/07_ssspringfall.gif" width="20%" style="left:42%; padding-top:83%; margin-bottom:10%;">
+        <img src="assets/images/PROJECTS/12_SSSPRINGFALL/07_ssspringfall.gif" width="20%" style="left:42%; padding-top:83%; padding-bottom:10%;">
       </div>
 
       <div id="box" >
