update web design lol

--- a/about-page.html
+++ b/about-page.html
@@ -38,8 +38,8 @@
   <!-- CURSOR ENDS HERE -->
 
   <!-- AS LOGO STARTS HERE-->
-    <div class="logo-bar">
-      <span class="logo"><a href="index.html" class="logo-nav">Alma Santang</a></span>
+    <div class="logo-bar" style="text-align:center;">
+      <span class="logo" style="color:black;"><a href="index.html" class="logo-nav">Alma Santang</a></span>
     </div>
   <!-- AS LOGO ENDS HERE -->
     <div class="alma-pic"><img src="assets/images/pic-alma.jpg"></div>
@@ -94,7 +94,7 @@
         <br><br>
       </div>
 
-        <div class="about-title takemehome"> <a href="index.html" class="navigation">⤺Take me home</a></div>
+        <div class="about-title takemehome"> <a href="index.html" class="navigation">✻Take me home</a></div>
         <br><br><br><br><br>
         
         <!-- EXPERIENCE -->     
