--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/acq8lgu.css">
   </head>
 <!-- BODY STARTS HERE -->
-  <body class="background">
+  <body class="background" style="background: radial-gradient(400px 450px at top right, #bfeafc, #efede8), radial-gradient(400px 450px at bottom left, #efede8, pink );">
 
   <!-- CURSOR STARTS HERE -->
     <svg id="svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1314 712">
@@ -38,8 +38,8 @@
   <!-- CURSOR ENDS HERE -->
 
   <!-- AS LOGO STARTS HERE-->
-    <div class="logo-bar">
-      <span class="logo">Alma Santang</span>
+    <div class="logo-bar" style="text-align:center;">
+      <span class="logo" style="color:black;">Alma Santang</span>
     </div>
   <!-- AS LOGO ENDS HERE -->
 
@@ -47,41 +47,41 @@
       <div class="col">
 
         <!-- HOMEPAGE HEADER COPY STARTS HERE -->
-        <div class="bodycopy-hp"> <span class="wave">👋</span><br>
+        <div class="bodycopy-hp" style="text-align:center; margin-top:15%"> <span class="wave">👋</span><br>
             Alma is a Naarm/Melbourne based communication designer. More about her
             <a href="about-page.html"><span class="arrow-header">&#8594;right this way.</span> </a>
             <br>
             Selected projects
-            <span class="arrow-header">&#8595;</span> down below.
+            <span class="arrow-header-2">&#8595;</span> down below.
             <br><br>
           </div>
         <!-- HOMEPAGE HEADER COPY ENDS HERE -->      
 
         <!-- HOMEPAGE PROJECTS REEL STARTS HERE --> 
         <div class="projects">
-            <a href="project-checkyourself.html"><img src="assets/images/HP_PROJECT_IMAGES/pr1-checkyourself.gif" class="pic"></a>
+            <a href="project-checkyourself.html"><img src="assets/images/HP_PROJECT_IMAGES/pr1-checkyourself.gif" class="pic" width="25%" style="margin-top:25%; margin-left:5%; margin-right:5%; margin-bottom:5%"></a>
 
-            <a href="project-moti.html"><img src="assets/images/HP_PROJECT_IMAGES/pr2-MOTI.png" class="pic"></a>
+            <a href="project-moti.html"><img src="assets/images/HP_PROJECT_IMAGES/pr2-MOTI.png" class="pic" width="25%" style="margin:3%;"></a>
 
-            <a href="project-productnatural.html"><img src="assets/images/HP_PROJECT_IMAGES/pr3-productnatural.gif" class="pic"></a>
+            <a href="project-productnatural.html"><img src="assets/images/HP_PROJECT_IMAGES/pr3-productnatural.gif" class="pic" width="25%" style="margin:3%;"></a>
 
-            <a href="project-novus.html"><img src="assets/images/HP_PROJECT_IMAGES/pr4-NOVUS.png" class="pic"></a>
+            <a href="project-novus.html"><img src="assets/images/HP_PROJECT_IMAGES/pr4-NOVUS.png" class="pic" width="25%" style="margin:5%;"></a>
 
-            <a href="project-therobinhood.html"><img src="assets/images/HP_PROJECT_IMAGES/pr5-therobinhood.png" class="pic"></a>
+            <a href="project-therobinhood.html"><img src="assets/images/HP_PROJECT_IMAGES/pr5-therobinhood.png" class="pic" width="25%" style="margin:3%;"></a>
 
-            <a href="project-agora.html"><img src="assets/images/HP_PROJECT_IMAGES/pr8-AGORA.gif" class="pic"></a>
+            <a href="project-agora.html"><img src="assets/images/HP_PROJECT_IMAGES/pr8-AGORA.gif" class="pic" width="25%" style="margin:3%;"></a>
 
-            <a href="project-agw.html"><img src="assets/images/HP_PROJECT_IMAGES/pr7-agw.gif" class="pic"></a>
+            <a href="project-agw.html"><img src="assets/images/HP_PROJECT_IMAGES/pr7-agw.gif" class="pic" width="25%" style="margin:3%;"></a>
 
-            <a href="project-kanyevthepeople.html"><img src="assets/images/HP_PROJECT_IMAGES/pr6-kanyevthepeople.png" class="pic"></a>
+            <a href="project-kanyevthepeople.html"><img src="assets/images/HP_PROJECT_IMAGES/pr6-kanyevthepeople.png" class="pic" width="25%" style="margin:3%;"></a>
 
-            <a href="project-stayinside.html"><img src="assets/images/HP_PROJECT_IMAGES/pr9-stayinside.gif" class="pic"></a>
+            <a href="project-stayinside.html"><img src="assets/images/HP_PROJECT_IMAGES/pr9-stayinside.gif" class="pic" width="25%" style="margin:3%;"></a>
 
-            <a href="project-iffound.html"><img src="assets/images/HP_PROJECT_IMAGES/pr10-iffound.gif" class="pic"></a>
+            <a href="project-iffound.html"><img src="assets/images/HP_PROJECT_IMAGES/pr10-iffound.gif" class="pic" width="25%" style="margin:3%;"></a>
 
-            <a href="project-alunalun.html"><img src="assets/images/HP_PROJECT_IMAGES/pr11-alun.gif" class="pic"></a>
+            <a href="project-alunalun.html"><img src="assets/images/HP_PROJECT_IMAGES/pr11-alun.gif" class="pic" width="25%" style="margin:3%;"></a>
 
-            <a href="project-ssspringfall.html"><img src="assets/images/HP_PROJECT_IMAGES/pr12-sspringfall.png" class="pic" width="20%" style="transform:rotate(5deg); margin-left:8%"></a>
+            <a href="project-ssspringfall.html"><img src="assets/images/HP_PROJECT_IMAGES/pr12-sspringfall.png" class="pic" width="20%" style="transform:rotate(5deg); margin:3%;"></a>
             <br><br><br><br><br><br><br><br><br>
         </div>
         <!-- HOMEPAGE PROJECTS REEL ENDS HERE --> 
