--- a/project-alunalun.html
+++ b/project-alunalun.html
@@ -40,13 +40,13 @@
   <!-- CURSOR ENDS HERE -->
 
   <!-- AS LOGO STARTS HERE-->
-    <div class="logo-bar">
-      <span class="logo"><a href="index.html" class="logo-nav">Alma Santang</a></span>
+   <div class="logo-bar background" style="text-align:center;">
+      <span class="logo" style="color:black;"><a href="index.html" class="logo-nav">Alma Santang</a></span>
     </div>
   <!-- AS LOGO ENDS HERE -->
 
 <!--   NAVIGATION -->
-    <div class="navigation-home"> <a href="index.html" class="navigation-home">⤺Take me home</a></div>
+    <div class="navigation-home"> <a href="index.html" class="navigation-home">✻Take me home</a></div>
     <div class="navigation-next"> <a href="project-ssspringfall.html" class="navigation-next">→Next</a></div>
     <div class="navigation-prev"> <a href="project-iffound.html" class="navigation-prev">Prev←</a></div>
 <!--   NAVIGATION -->
