--- a/about-page.html
+++ b/about-page.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/acq8lgu.css">
   </head>
 <!-- BODY STARTS HERE -->
-  <body class="background">
+  <body class="background" style="background: radial-gradient(800px 1200px at bottom right, #bfeafc, #84b2d7);">
 
   <!-- CURSOR STARTS HERE -->
     <svg id="svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1314 712">
