--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
             <a href="project-alunalun.html"><img src="assets/images/HP_PROJECT_IMAGES/pr11-alun.gif" class="pic" width="25%" style="margin:3%;"></a>
 
             <a href="project-ssspringfall.html"><img src="assets/images/HP_PROJECT_IMAGES/pr12-sspringfall.png" class="pic" width="20%" style="transform:rotate(5deg); margin:3%;"></a>
+
+            <a href="project-sstsw.html"><img src="assets/images/HP_PROJECT_IMAGES/pr13-sstsw.jpg" class="pic" width="20%" style="transform:rotate(-5deg); margin:3%;"></a>
             <br><br><br><br><br><br><br><br><br>
         </div>
         <!-- HOMEPAGE PROJECTS REEL ENDS HERE --> 
