--- a/project-ssspringfall.html
+++ b/project-ssspringfall.html
@@ -47,8 +47,8 @@
 
 <!--   NAVIGATION -->
     <div class="navigation-home"> <a href="index.html" class="navigation-home">✻Take me home</a></div>
-<!--     <div class="navigation-next"> <a href="project-ssspringfall.html" class="navigation-next">→Next</a></div> -->
-    <div class="navigation-next"> <a href="project-alunalun.html" class="navigation-next">Prev←</a></div>
+    <div class="navigation-next"> <a href="project-sstsw.html" class="navigation-next">→Next</a></div>
+    <div class="navigation-prev"> <a href="project-alunalun.html" class="navigation-prev">Prev←</a></div>
 <!--   NAVIGATION -->
 
     <div class="grid background">
