--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
             <a href="project-ssspringfall.html"><img src="assets/images/HP_PROJECT_IMAGES/pr12-sspringfall.png" class="pic" width="20%" style="transform:rotate(5deg); margin:3%;"></a>
 
-            <a href="project-sstsw.html"><img src="assets/images/HP_PROJECT_IMAGES/pr13-sstsw.jpg" class="pic" width="20%" style="transform:rotate(-5deg); margin:3%;"></a>
+            <a href="project-sstsw.html"><img src="assets/images/HP_PROJECT_IMAGES/pr13-sstsw.jpg" class="pic" width="20%" style="transform:rotate(-5deg); margin-left:36%; margin-top:3%"></a>
             <br><br><br><br><br><br><br><br><br>
         </div>
         <!-- HOMEPAGE PROJECTS REEL ENDS HERE --> 
