--- a/project-productnatural.html
+++ b/project-productnatural.html
@@ -102,7 +102,7 @@
       </div>
 
       <div id="box" >
-        <a href="https://vimeo.com/341470455" target="blank_"><img src="assets/images/PROJECTS/03_PRODUCTNATURAL/05_pn.jpg" width="40%" style="left:55%; margin-top:120%; z-index:1; cursor:pointer; margin-bottom:15%;"></a>
+        <a href="https://vimeo.com/341470455" target="blank_"><img src="assets/images/PROJECTS/03_PRODUCTNATURAL/05_pn.jpg" width="40%" style="left:30%; margin-top:120%; z-index:1; cursor:pointer;margin-bottom:15%"></a>
       </div>
       <br><br><br><br><br><br><br>
     </div>
