--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/acq8lgu.css">
   </head>
 <!-- BODY STARTS HERE -->
-  <body class="background" style="background: radial-gradient(400px 450px at top left, pink, transparent), radial-gradient(400px 450px at top right, #bfeafc, #efede8);">
+  <body class="background" style="background: radial-gradient(400px 450px at top left, pink, transparent), radial-gradient(400px 450px at top right, #bfeafc, white);">
 
   <!-- CURSOR STARTS HERE -->
     <svg id="svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1314 712">
