--- a/project-agw.html
+++ b/project-agw.html
@@ -69,7 +69,7 @@
         </div>
 
         <div class="title titledesc background">
-          <br><br><br><br><br><br><br><br><br><br>Brand Identity<br>
+          <br><br><br><br><br><br><br><br><br><br>Brand identity<br>
           Client: All Good Works (Indonesia)
         </div>
         <!-- MAIN DESCRIPTIONS -->
