--- a/project-alunalun.html
+++ b/project-alunalun.html
@@ -69,7 +69,7 @@
         </div>
 
         <div class="title titledesc background">
-          <br><br><br><br><br><br><br><br><br><br>Visual Identity<br>
+          <br><br><br><br><br><br><br><br><br><br>Visual identity, motion graphics<br>
           A project for PPIA Victoria
         </div>
         <!-- MAIN DESCRIPTIONS -->
