--- a/project-checkyourself.html
+++ b/project-checkyourself.html
@@ -68,7 +68,7 @@
         </div>
 
         <div class="title titledesc background">
-          <br><br><br>Brand Identity & Web Design<br>
+          <br><br><br>Brand identity & web design<br>
           Supervised by Adam Cruickshank & Alex Margetic
         </div>
         <!-- MAIN DESCRIPTIONS -->
