--- a/project-kanyevthepeople.html
+++ b/project-kanyevthepeople.html
@@ -69,7 +69,7 @@
         </div>
 
         <div class="title titledesc background">
-          <br><br><br><br><br><br><br><br><br><br><br><br>Double-sided two colours screenprint on tracing paper.<br>
+          <br><br><br><br><br><br><br><br><br><br><br><br>Double-sided two colours screenprint on tracing paper<br>
           Supervised by Trent Walter and Warren Taylor
         </div>
         <!-- MAIN DESCRIPTIONS -->
