--- a/project-moti.html
+++ b/project-moti.html
@@ -69,7 +69,7 @@
         </div>
 
         <div class="title titledesc background">
-          <br>Brand Identity<br>
+          <br>Brand identity<br>
           Supervised by Janet Mills
         </div>
         <!-- MAIN DESCRIPTIONS -->
