--- a/project-novus.html
+++ b/project-novus.html
@@ -69,8 +69,8 @@
         </div>
 
         <div class="title titledesc background">
-          <br><br><br><br><br><br>On-demand book & web design<br>
-          Supervised by Uriah Gray
+          <br><br><br><br><br><br>Brand Identity & Exhibition Design<br>
+          Supervised by Matthew Angel
         </div>
         <!-- MAIN DESCRIPTIONS -->
       </div>
