--- a/project-therobinhood.html
+++ b/project-therobinhood.html
@@ -69,8 +69,8 @@
         </div>
 
         <div class="title titledesc background">
-          <br><br><br><br><br><br><br>Brand Identity & Exhibition Design<br>
-          Supervised by Matthew Angel
+          <br><br><br><br><br><br><br>Data & research visualisation, card design<br>
+          Supervised by Warren Taylor & Hayden Doward
         </div>
         <!-- MAIN DESCRIPTIONS -->
       </div>
